--- a/ADMFacturar/Views/Shared/PageOptions.cshtml
+++ b/ADMFacturar/Views/Shared/PageOptions.cshtml
@@ -2,16 +2,16 @@
 Page Options
 *@
 
-<a href="#"
+<a asp-controller="CXC" asp-action="Index"
    class="flex items-center text-white py-4 pl-6 nav-item">
     <i class="fas fa-tachometer-alt mr-3"></i>
-    Dashboard
+    Cuentas por Cobrar
 </a>
 
-<a href="#"
+<a asp-controller="CXP" asp-action="Index" 
    class="flex items-center text-white py-4 pl-6 nav-item">
     <i class="fas fa-tachometer-alt mr-3"></i>
-    1
+    Cuentas por Pagar
 </a>
 
 <a href="#"
@@ -25,3 +25,14 @@ Page Options
     <i class="fas fa-tachometer-alt mr-3"></i>
     3
 </a>﻿
+
+@* 
+<div class="nav-item dropdown">
+    <a href="#" class="flex items-center text-white py-4 pl-6 nav-item">
+        <i class="fas fa-list-alt mr-3"></i> Cuentas Por Pagar <i class="fas fa-caret-down ml-1"></i>
+    </a>
+    <div class="dropdown-content"> 
+        
+    </div>
+</div>
+ *@
