--- a/ADMFacturar/Views/Shared/_Layout.cshtml
+++ b/ADMFacturar/Views/Shared/_Layout.cshtml
@@ -18,12 +18,10 @@
                     <div class="w-full overflow-x-hidden border-t flex flex-col">
                         <main class="w-full flex-grow p-6">
 
-
+                            @RenderBody()
                         </main>
                     </div>
-
         </div>
-
 </body>
 @RenderBody()
 </html>
