Cambios de estilos

--- a/ADMFacturar/Views/CXC/Index.cshtml
+++ b/ADMFacturar/Views/CXC/Index.cshtml
@@ -6,18 +6,18 @@
 
 <form>
         <div class="border-b border-gray-900/10 pb-12">
-            <h2 class="text-base font-semibold leading-7 text-gray-900">Información Cuentas Por Cobrar</h2>
+            <h2 class="text-base font-semibold leading-7 text-white">Información Cuentas Por Cobrar</h2>
             <div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
             
             <div class="sm:col-span-2 sm:col-start-1">
-                <label for="city" class="block text-sm font-medium leading-6 text-gray-900">Fecha Inicio</label>
+                <label for="city" class="block text-sm font-medium leading-6 text-white">Fecha Inicio</label>
                 <div class="mt-2">
                     <input type="date" name="city" id="city" autocomplete="address-level2" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                 </div>
             </div>        
 
             <div class="sm:col-span-2">
-                <label for="region" class="block text-sm font-medium leading-6 text-gray-900">Fecha Final</label>
+                <label for="region" class="block text-sm font-medium leading-6 text-white">Fecha Final</label>
                 <div class="mt-2">
                     <input type="date" name="region" id="region" autocomplete="address-level1" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                 </div>
@@ -25,7 +25,7 @@
             <div class="sm:col-span-2">
                 <div>
                     <fieldset>
-                        <legend class="block text-sm font-medium leading-6 text-gray-900">Estado</legend>
+                        <legend class="block text-sm font-medium leading-6 text-white">Estado</legend>
                         <div class="mt-3 flex items-center gap-x-10">
                             <div class="flex items-center gap-x-2 bg-yellow-100 text-yellow-800 text-md font-medium px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-blue-400 border border-yellow-400 ">
                                 <input id="push-everything" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
@@ -44,21 +44,21 @@
 
 
             <div class="sm:col-span-2 sm:col-start-1">
-                    <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Cliente</label>
+                <label for="email" class="block text-sm font-medium leading-6 text-white">Cliente</label>
                     <div class="mt-2">
                         <input id="email" name="email" type="email" autocomplete="email" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                     </div>
                 </div>
 
                 <div class="sm:col-span-2 ">
-                    <label for="city" class="block text-sm font-medium leading-6 text-gray-900">Vendedor</label>
+                <label for="city" class="block text-sm font-medium leading-6 text-white">Vendedor</label>
                     <div class="mt-2">
                         <input type="text" name="city" id="city" autocomplete="address-level2" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                     </div>
                 </div>
 
                 <div class="sm:col-span-2">
-                    <label for="region" class="block text-sm font-medium leading-6 text-gray-900">Factura</label>
+                <label for="region" class="block text-sm font-medium leading-6 text-white">Factura</label>
                     <div class="mt-2">
                         <input type="text" name="region" id="region" autocomplete="address-level1" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                     </div>
@@ -92,7 +92,7 @@
 <!--                  Formulario                        -->
 
 <div class="w-full">
-    <p class="text-xl pb-3 flex items-center">
+    <p class="text-xl pb-3 flex items-center text-white">
         <i class="fas fa-list mr-3"></i> Listado de Cuentas Por Cobrar
     </p>
     <div class="bg-white overflow-auto">
