--- a/ADMFacturar/Views/Shared/_Layout.cshtml
+++ b/ADMFacturar/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <title>Layout</title>
     <partial name="Head">
 </head>
-<body class="bg-gray-100 font-family-karla flex">
+<body class="bg-body font-family-karla flex">
 
     <partial name="Aside">
 
