--- a/ADMFacturar/Views/Shared/Aside.cshtml
+++ b/ADMFacturar/Views/Shared/Aside.cshtml
@@ -3,7 +3,7 @@
 
 <aside class="relative bg-sidebar h-screen w-64 hidden sm:block shadow-xl">
     <div class="p-6">
-        <a href="/" class="text-white text-2xl font-semibold hover:text-gray-300">VET. CENTER</a>
+        <a href="/" class="text-white text-2xl font-semibold hover:text-gray-300">ADM Facturar</a>
     </div>
     <nav class="text-white text-base font-semibold pt-3">
         <partial name="PageOptions">
