--- a/ADMFacturar/Views/Shared/Head.cshtml
+++ b/ADMFacturar/Views/Shared/Head.cshtml
@@ -7,4 +7,5 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs=" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/6467377a4d.js" crossorigin="anonymous"></script>
 </head>
