--- a/ADMFacturar/Views/CXC/Abono.cshtml
+++ b/ADMFacturar/Views/CXC/Abono.cshtml
@@ -1,3 +1,58 @@
-﻿@{
-}
-Abono
+﻿<link href="~/css/custom.css" rel="stylesheet" />
+
+<div class="w-full">
+</div>
+
+<form>
+    <div class="border-b border-gray-900/10 pb-12">
+        <h2 class="text-base font-semibold leading-7 text-white">Creación de Abonos</h2>
+        <div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+
+            <div class="sm:col-span-2 sm:col-start-1">
+                <label for="region" class="block text-sm font-medium leading-6 text-white">Tipo de Documento</label>
+                <div class="mt-2">
+                    <select class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
+                        <option>Transferencia</option>
+                        <option>Efectivo</option>
+                        <option>Cheque</option>
+                        <option>Sinpe</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="sm:col-span-2">
+                <label for="region" class="block text-sm font-medium leading-6 text-white">Número de Recibo</label>
+                <div class="mt-2">
+                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                </div>
+            </div>
+
+            <div class="sm:col-span-2">
+                <label for="region" class="block text-sm font-medium leading-6 text-white">Monto</label>
+                <div class="mt-2">
+                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                </div>
+            </div>
+
+            <div class="sm:col-span-2">
+                <label for="region" class="block text-sm font-medium leading-6 text-white">Banco</label>
+                <div class="mt-2">
+                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                </div>
+            </div>
+
+
+            <div class="sm:col-span-2">
+                <label for="region" class="block text-sm font-medium leading-6 text-white">Número de Deposito</label>
+                <div class="mt-2">
+                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                </div>
+            </div>
+            <div class="sm:col-span-2">
+          
+            </div>
+            <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Crear</button>
+        </div>
+    </div>
+
+</form>
