--- a/ADMFacturar/Views/CXC/Detalles.cshtml
+++ b/ADMFacturar/Views/CXC/Detalles.cshtml
@@ -1,3 +1,122 @@
-﻿@{
-}
-Detalles
+﻿<link href="~/css/custom.css" rel="stylesheet" />
+
+<div class="w-full">
+</div>
+
+<form>
+    <div class="border-b border-gray-900/10 pb-12">
+        <h2 class="text-base font-semibold leading-7 text-white">Detalle de Saldo de Documento</h2>
+        <div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+
+            
+
+            <div class="sm:col-span-2 sm:col-start-1">
+                <label for="email" class="block text-sm font-medium leading-6 text-white">Cliente</label>
+                <div class="mt-2">
+                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" disabled value="America America">
+                </div>
+            </div>
+
+            <div class="sm:col-span-2 ">
+                <label for="city" class="block text-sm font-medium leading-6 text-white">Factura</label>
+                <div class="mt-2">
+                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" disabled value="000001">
+                </div>
+            </div>
+
+            <div class="sm:col-span-2">
+                <label for="region" class="block text-sm font-medium leading-6 text-white">Fecha Factura</label>
+                <div class="mt-2">
+                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" disabled value="10/02/2024">
+                </div>
+            </div>
+
+
+            <div class="sm:col-span-2 sm:col-start-1">
+                <label for="email" class="block text-sm font-medium leading-6 text-white">Vendedor</label>
+                <div class="mt-2">
+                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" disabled value="Mario Castillo">
+                </div>
+            </div>
+
+            <div class="sm:col-span-2 ">
+                <label for="city" class="block text-sm font-medium leading-6 text-white">Total Factura</label>
+                <div class="mt-2">
+                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" disabled value="₡300.000">
+                </div>
+            </div>
+
+            <div class="sm:col-span-2">
+                <label for="region" class="block text-sm font-medium leading-6 text-white">Saldo Actual</label>
+                <div class="mt-2">
+                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" disabled value="₡100.000">
+                </div>
+            </div>
+            <!-- Fin de Datos-->
+        </div>
+    </div>
+    @* <div>
+    <fieldset>
+    <legend class="text-sm font-semibold leading-6 text-gray-900">Push Notifications</legend>
+    <p class="mt-1 text-sm leading-6 text-gray-600">These are delivered via SMS to your mobile phone.</p>
+    <div class="mt-6 space-y-6">
+    <div class="flex items-center gap-x-3">
+    <input id="push-everything" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
+    <label for="push-everything" class="block text-sm font-medium leading-6 text-gray-900">Everything</label>
+    </div>
+    <div class="flex items-center gap-x-3">
+    <input id="push-email" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
+    <label for="push-email" class="block text-sm font-medium leading-6 text-gray-900">Same as email</label>
+    </div>
+    <div class="flex items-center gap-x-3">
+    <input id="push-nothing" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
+    <label for="push-nothing" class="block text-sm font-medium leading-6 text-gray-900">No push notifications</label>
+    </div>
+    </div>
+    </fieldset>
+    </div> *@
+</form>
+
+<!--                  Formulario                        -->
+
+<div class="w-full">
+    <p class="text-xl pb-3 flex items-center text-white">
+        <i class="fas fa-list mr-3"></i> Listado de Recibos
+    </p>
+    <div class="bg-white overflow-auto">
+        <table class="min-w-full bg-white border border-gray-300">
+            <thead class="bg-gray-900 text-white">
+                <tr>
+                    <th class="text-center py-3">Recibo</th>
+                    <th class="text-center py-3">Tipo Documento</th>
+                    <th class="text-center py-3">Monto</th>
+                    <th class="text-center py-3">Saldo Factura</th>
+                    <th class="text-center py-3">Acciones</th>
+                </tr>
+            </thead>
+            <tbody class="text-center">
+                <tr class="even:bg-gray-50 dark:even:bg-gray-900/50 lg:justify-center">
+                    <td class="p-3 border border-gray-300">
+                        <span class=" text-md font-medium px-2.5 py-0.5">240036</span>
+                    </td>
+                    <td class="p-3 border border-gray-300">Cheque</td>
+                    <td class="p-3 border border-gray-300">₡200.000</td>
+                    <td class="p-3 border border-gray-300">₡100.000</td>
+                    <td class="p-3 border border-gray-300">
+
+                        <Botton class="btn btnCrear" title="Crear Abono">
+                            <a asp-action="Abono">
+                                <svg class="svg-inline--fa fa-times fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z" /></svg>
+                            </a>
+                        </Botton>
+                        <Botton class="btn VerDetalles" title="Detalles">
+                            <a asp-action="Detalles">
+                                <svg class="svg-inline--fa fa-eye fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="eye" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" data-fa-i2svg=""><path fill="currentColor" d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"></path> </svg>
+                            </a>
+                        </Botton>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
