--- a/ADMFacturar/Views/CXC/Index.cshtml
+++ b/ADMFacturar/Views/CXC/Index.cshtml
@@ -12,14 +12,14 @@
             <div class="sm:col-span-2 sm:col-start-1">
                 <label for="city" class="block text-sm font-medium leading-6 text-white">Fecha Inicio</label>
                 <div class="mt-2">
-                    <input type="date" name="city" id="city" autocomplete="address-level2" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                    <input type="date"  class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
                 </div>
             </div>        
 
             <div class="sm:col-span-2">
                 <label for="region" class="block text-sm font-medium leading-6 text-white">Fecha Final</label>
                 <div class="mt-2">
-                    <input type="date" name="region" id="region" autocomplete="address-level1" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                    <input type="date" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
                 </div>
             </div>
             <div class="sm:col-span-2">
@@ -46,21 +46,21 @@
             <div class="sm:col-span-2 sm:col-start-1">
                 <label for="email" class="block text-sm font-medium leading-6 text-white">Cliente</label>
                     <div class="mt-2">
-                        <input id="email" name="email" type="email" autocomplete="email" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                    <input type="text"  class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
                     </div>
                 </div>
 
                 <div class="sm:col-span-2 ">
                 <label for="city" class="block text-sm font-medium leading-6 text-white">Vendedor</label>
                     <div class="mt-2">
-                        <input type="text" name="city" id="city" autocomplete="address-level2" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                    <input type="text"  class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
                     </div>
                 </div>
 
                 <div class="sm:col-span-2">
                 <label for="region" class="block text-sm font-medium leading-6 text-white">Factura</label>
                     <div class="mt-2">
-                        <input type="text" name="region" id="region" autocomplete="address-level1" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                    <input type="text"  class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
                     </div>
                 </div>
 
@@ -98,9 +98,9 @@
     <div class="bg-white overflow-auto">
         <table class="min-w-full bg-white border border-gray-300">
             <thead class="bg-gray-900 text-white">
-                <tr>
-                    <th class="text-center py-3">Cliente</th>
+                <tr>               
                     <th class="text-center py-3">Factura</th>
+                    <th class="text-center py-3">Cliente</th>
                     <th class="text-center py-3">Detalle</th>
                     <th class="text-center py-3">Total</th>
                     <th class="text-center py-3">Saldo</th>
@@ -109,13 +109,13 @@
             </thead>
             <tbody class="text-center">
                 <tr class="even:bg-gray-50 dark:even:bg-gray-900/50 lg:justify-center">
+                    <td class="p-3 border border-gray-300">000001</td>
                     <td class="p-3 border border-gray-300">
                         <span class=" text-md font-medium px-2.5 py-0.5">American America</span>
-                        </td>
-                    <td class="p-3 border border-gray-300">000001</td>
+                    </td>
                     <td class="p-3 border border-gray-300">Se debe cancelar el 22/07/2024</td>
-                    <td class="p-3 border border-gray-300">200000</td>
-                    <td class="p-3 border border-gray-300">100000</td>
+                    <td class="p-3 border border-gray-300">₡300.000</td>
+                    <td class="p-3 border border-gray-300">₡100.000</td>
                     <td class="p-3 border border-gray-300">
 
                         <Botton class="btn btnCrear" title="Crear Abono">
