--- a/ADMFacturar/wwwroot/css/Custom.css
+++ b/ADMFacturar/wwwroot/css/Custom.css
@@ -150,6 +150,48 @@
         color: #ffffff; 
     }
 
+.btnEditar {
+    background-color: transparent;
+    border: 1px solid #ffbf0f;
+    color: #ffbf0f;
+    width: 2rem;
+    height: 2rem;
+    font-weight: bold;
+    padding: 0.25rem 0.5rem;
+    border-radius: 0.375rem;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+    margin: 0.25rem;
+    outline: none;
+    box-shadow: none;
+}
+
+    .btnEditar:hover {
+        background-color: #ffbf0f;
+        color: #ffffff;
+    }
+
+.btnEliminar {
+    background-color: transparent;
+    border: 1px solid #dd0000;
+    color: #dd0000;
+    width: 2rem;
+    height: 2rem;
+    font-weight: bold;
+    padding: 0.25rem 0.5rem;
+    border-radius: 0.375rem;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+    margin: 0.25rem;
+    outline: none;
+    box-shadow: none;
+}
+
+    .btnEliminar:hover {
+        background-color: #dd0000;
+        color: #ffffff;
+    }
+
 .VerDetalles {
     background-color: transparent;
     border: 1px solid #525f70;
