--- a/ADMFacturar/Views/Shared/PageOptions.cshtml
+++ b/ADMFacturar/Views/Shared/PageOptions.cshtml
@@ -38,7 +38,7 @@ Page Options
     Marketing
 </a>
 
-<a asp-controller="#" asp-action="Index" 
+<a asp-controller="Reportes" asp-action="Index" 
    class="flex items-center text-white py-4 pl-6 nav-item">
     <i class="fa-solid fa-file mr-3"></i>
     Reportes
