Creacion de Modulo Administrativo

--- a/ADMFacturar/Views/Shared/PageOptions.cshtml
+++ b/ADMFacturar/Views/Shared/PageOptions.cshtml
@@ -45,13 +45,13 @@ Page Options
 </a>
 
 @* Se debe colocar un condicional para administradores *@
-<a asp-controller="#" asp-action="Index" 
+<a asp-controller="Administracion" asp-action="Index" 
    class="flex items-center text-white py-4 pl-6 nav-item">
     <i class="fa-solid fa-users mr-3"></i>
     Administración
 </a>
 
-<a asp-controller="#" asp-action="Index" 
+<a asp-controller="Seguridad" asp-action="Index" 
    class="flex items-center text-white py-4 pl-6 nav-item">
     <i class="fa-solid fa-shield-halved mr-3"></i>
     Seguridad
