--- a/ADMFacturar/Views/CXC/Index.cshtml
+++ b/ADMFacturar/Views/CXC/Index.cshtml
@@ -1,16 +1,42 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-
 <body>
-
     <link href="~/css/custom.css" rel="stylesheet" />
+    <script>
+        // Función para abrir la modal
+        function abrirModal(idModal) {
+            var modal = document.getElementById(idModal);
+            modal.style.display = "block";
+        }
+
+        // Cierra la modal cuando el usuario hace clic en el botón de cerrar (x)
+        var modals = document.getElementsByClassName("modal");
+        for (var i = 0; i < modals.length; i++) {
+            var modal = modals[i];
+            var closeButton = modal.getElementsByClassName("close")[0];
+            closeButton.onclick = function () {
+                modal.style.display = "none";
+            }
+        }
+
+        // Cierra la modal cuando el usuario hace clic fuera de ella
+        window.onclick = function (event) {
+            for (var i = 0; i < modals.length; i++) {
+                var modal = modals[i];
+                if (event.target == modal) {
+                    modal.style.display = "none";
+                }
+            }
+        }
+    </script>
 
     <div class="w-full">
     </div>
-
+     <!--Incio de form-->
     <form>
         <div class="border-b border-gray-900/10 pb-12">
             <h2 class="text-base font-semibold leading-7 text-white">Información Cuentas Por Cobrar</h2>
+            <!--Fechas del form-->
             <div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
 
                 <div class="sm:col-span-2 sm:col-start-1">
@@ -72,67 +98,10 @@
             </div>
         </div>
     </form>
+    <!--Final de From-->
 
-    <!-- Modal de Crear Abono -->
-    <div id="modalCrearAbono" class="modal">
-        <div class="modal-content">
-
-            <form>
-                <div class="border-b border-gray-900/10 pb-12">
-                    <h2 class="text-base font-semibold leading-7 text-white">Gestión de Abonos</h2>
-                    <div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
-
-                        <div class="sm:col-span-2 sm:col-start-1">
-                            <label for="region" class="block text-sm font-medium leading-6 text-white">Tipo de Documento</label>
-                            <div class="mt-2">
-                                <select class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
-                                    <option>Transferencia</option>
-                                    <option>Efectivo</option>
-                                    <option>Cheque</option>
-                                    <option>Sinpe</option>
-                                </select>
-                            </div>
-                        </div>
-
-                        <div class="sm:col-span-2">
-                            <label for="region" class="block text-sm font-medium leading-6 text-white">Número de Recibo</label>
-                            <div class="mt-2">
-                                <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                            </div>
-                        </div>
-
-                        <div class="sm:col-span-2">
-                            <label for="region" class="block text-sm font-medium leading-6 text-white">Monto</label>
-                            <div class="mt-2">
-                                <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                            </div>
-                        </div>
-
-                        <div class="sm:col-span-2">
-                            <label for="region" class="block text-sm font-medium leading-6 text-white">Banco</label>
-                            <div class="mt-2">
-                                <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                            </div>
-                        </div>
-
-
-                        <div class="sm:col-span-2">
-                            <label for="region" class="block text-sm font-medium leading-6 text-white">Número de Deposito</label>
-                            <div class="mt-2">
-                                <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                            </div>
-                        </div>
-                        <div class="sm:col-span-2">
-                        </div>
-                        <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
-                    </div>
-                </div>
-
-            </form>
-        </div>
-    </div>
-    <!-- Fin Modal -->
-    <!--                  Formulario                        -->
+    <!-- Info de tabla -->
+    <!--                  Tabla                        -->
 
     <div class="w-full">
         <p class="text-xl pb-3 flex items-center text-white">
@@ -163,9 +132,11 @@
                             <button class="btn btnCrear" title="Crear Abono" onclick="abrirModal('modalCrearAbono')">
                                 <svg class="svg-inline--fa fa-times fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z" /></svg>
                             </button>
-                            <button class="btn VerDetalles" title="Detalles">
-                                <svg class="svg-inline--fa fa-eye fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="eye" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" data-fa-i2svg=""><path fill="currentColor" d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"></path> </svg>
-                            </button>
+                            <Botton class="btn VerDetalles" title="Detalles">
+                                <a asp-action="Detalles">
+                                    <svg class="svg-inline--fa fa-eye fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="eye" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" data-fa-i2svg=""><path fill="currentColor" d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"></path> </svg>
+                                </a>
+                                </button>
                         </td>
                     </tr>
                 </tbody>
@@ -173,33 +144,66 @@
         </div>
     </div>
 
-    <script>
-        // Función para abrir la modal
-        function abrirModal(idModal) {
-          var modal = document.getElementById(idModal);
-          modal.style.display = "block";
-        }
+    <!-- Final de Tabla -->
 
-        // Cierra la modal cuando el usuario hace clic en el botón de cerrar (x)
-        var modals = document.getElementsByClassName("modal");
-        for (var i = 0; i < modals.length; i++) {
-          var modal = modals[i];
-          var closeButton = modal.getElementsByClassName("close")[0];
-          closeButton.onclick = function() {
-            modal.style.display = "none";
-          }
-        }
+<!-- Modal de Crear Abono -->
+<div id="modalCrearAbono" class="modal">
+  <div class="modal-content">
+      <form>
+    <div class="border-b border-gray-900/10 pb-12">
+        <h2 class="text-base font-semibold leading-7 text-white">Gestión de Abonos</h2>
+        <div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
 
-        // Cierra la modal cuando el usuario hace clic fuera de ella
-        window.onclick = function(event) {
-          for (var i = 0; i < modals.length; i++) {
-            var modal = modals[i];
-            if (event.target == modal) {
-              modal.style.display = "none";
-            }
-          }
-        }
-    </script>
+            <div class="sm:col-span-2 sm:col-start-1">
+                <label for="region" class="block text-sm font-medium leading-6 text-white">Tipo de Documento</label>
+                <div class="mt-2">
+                    <select class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
+                        <option>Transferencia</option>
+                        <option>Efectivo</option>
+                        <option>Cheque</option>
+                        <option>Sinpe</option>
+                    </select>
+                </div>
+            </div>
 
+            <div class="sm:col-span-2">
+                <label for="region" class="block text-sm font-medium leading-6 text-white">Número de Recibo</label>
+                <div class="mt-2">
+                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                </div>
+            </div>
+
+            <div class="sm:col-span-2">
+                <label for="region" class="block text-sm font-medium leading-6 text-white">Monto</label>
+                <div class="mt-2">
+                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                </div>
+            </div>
+
+            <div class="sm:col-span-2">
+                <label for="region" class="block text-sm font-medium leading-6 text-white">Banco</label>
+                <div class="mt-2">
+                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                </div>
+            </div>
+
+
+            <div class="sm:col-span-2">
+                <label for="region" class="block text-sm font-medium leading-6 text-white">Número de Deposito</label>
+                <div class="mt-2">
+                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                </div>
+            </div>
+            <div class="sm:col-span-2">
+          
+            </div>
+            <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
+        </div>
+    </div>
+
+</form>
+  </div>
+</div>
+<!-- Fin Modal -->
 </body>
 </html>
