--- a/ADMFacturar/Views/CXP/Detalles.cshtml
+++ b/ADMFacturar/Views/CXP/Detalles.cshtml
@@ -1,6 +1,34 @@
-﻿<link href="~/css/custom.css" rel="stylesheet" />
+﻿<!DOCTYPE html>
+<html lang="en">
+<body>
+    <link href="~/css/custom.css" rel="stylesheet" />
+    <script>
+        // Función para abrir la modal
+        function abrirModal(idModal) {
+            var modal = document.getElementById(idModal);
+            modal.style.display = "block";
+        }
 
+        // Cierra la modal cuando el usuario hace clic en el botón de cerrar (x)
+        var modals = document.getElementsByClassName("modal");
+        for (var i = 0; i < modals.length; i++) {
+            var modal = modals[i];
+            var closeButton = modal.getElementsByClassName("close")[0];
+            closeButton.onclick = function () {
+                modal.style.display = "none";
+            }
+        }
 
+        // Cierra la modal cuando el usuario hace clic fuera de ella
+        window.onclick = function (event) {
+            for (var i = 0; i < modals.length; i++) {
+                var modal = modals[i];
+                if (event.target == modal) {
+                    modal.style.display = "none";
+                }
+            }
+        }
+    </script>
 
 <div class="w-full">
 </div>
@@ -33,13 +61,6 @@
                 </div>
             </div>
 
-
-            <div class="sm:col-span-2 sm:col-start-1">
-                <label for="email" class="block text-sm font-medium leading-6 text-white">Vendedor</label>
-                <div class="mt-2">
-                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" disabled value="Mario Castillo">
-                </div>
-            </div>
 
             <div class="sm:col-span-2 ">
                 <label for="city" class="block text-sm font-medium leading-6 text-white">Total Factura</label>
@@ -81,15 +102,14 @@
                     <td class="p-3 border border-gray-300">
                         <span class=" text-md font-medium px-2.5 py-0.5">240036</span>
                     </td>
-                    <td class="p-3 border border-gray-300">Cheque</td>
+                    <td class="p-3 border border-gray-300">Transferencia</td>
                     <td class="p-3 border border-gray-300">₡200.000</td>
                     <td class="p-3 border border-gray-300">₡100.000</td>
                     <td class="p-3 border border-gray-300">
 
-                        <Botton class="btn btnEditar" title="Editar Abono">
-                            <a asp-action="Abono">
+                           <button class="btn btnEditar" title="Editar Abono" onclick="abrirModal('modalCrearAbono')">                    
                                 <svg class="svg-inline--fa fa-times fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d=" M410.3 231l11.3-11.3-33.9-33.9-62.1-62.1L291.7 89.8l-11.3 11.3-22.6 22.6L58.6 322.9c-10.4 10.4-18 23.3-22.2 37.4L1 480.7c-2.5 8.4-.2 17.5 6.1 23.7s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L387.7 253.7 410.3 231zM160 399.4l-9.1 22.7c-4 3.1-8.5 5.4-13.3 6.9L59.4 452l23-78.1c1.4-4.9 3.8-9.4 6.9-13.3l22.7-9.1v32c0 8.8 7.2 16 16 16h32zM362.7 18.7L348.3 33.2 325.7 55.8 314.3 67.1l33.9 33.9 62.1 62.1 33.9 33.9 11.3-11.3 22.6-22.6 14.5-14.5c25-25 25-65.5 0-90.5L453.3 18.7c-25-25-65.5-25-90.5 0zm-47.4 168l-144 144c-6.2 6.2-16.4 6.2-22.6 0s-6.2-16.4 0-22.6l144-144c6.2-6.2 16.4-6.2 22.6 0s6.2 16.4 0 22.6z" /></svg>
-                            </a>
+                            </button>
                         </Botton>
                         <Botton class="btn btnEliminar" title="Eliminar Abono">
                             <a asp-action="Detalles">
@@ -102,3 +122,65 @@
         </table>
     </div>
 </div>
+
+    <!-- Final de Tabla -->
+    <!-- Modal de Editar Abono -->
+    <div id="modalCrearAbono" class="modal">
+        <div class="modal-content">
+            <form>
+                <div class="border-b border-gray-900/10 pb-12">
+                    <h2 class="text-base font-semibold leading-7 text-white">Gestión de Abonos</h2>
+                    <div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+
+                        <div class="sm:col-span-2 sm:col-start-1">
+                            <label for="region" class="block text-sm font-medium leading-6 text-white">Tipo de Documento</label>
+                            <div class="mt-2">
+                                <select class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
+                                    <option>Transferencia</option>
+                                    <option>Efectivo</option>
+                                    <option>Cheque</option>
+                                    <option>Sinpe</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="sm:col-span-2">
+                            <label for="region" class="block text-sm font-medium leading-6 text-white">Número de Recibo</label>
+                            <div class="mt-2">
+                                <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" disabled value="240036">
+                            </div>
+                        </div>
+
+                        <div class="sm:col-span-2">
+                            <label for="region" class="block text-sm font-medium leading-6 text-white">Monto</label>
+                            <div class="mt-2">
+                                <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" value="₡200.000">
+                            </div>
+                        </div>
+
+                        <div class="sm:col-span-2">
+                            <label for="region" class="block text-sm font-medium leading-6 text-white">Banco</label>
+                            <div class="mt-2">
+                                <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" value="BNCR">
+                            </div>
+                        </div>
+
+
+                        <div class="sm:col-span-2">
+                            <label for="region" class="block text-sm font-medium leading-6 text-white">Número de Deposito</label>
+                            <div class="mt-2">
+                                <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" value="0001110012">
+                            </div>
+                        </div>
+                        <div class="sm:col-span-2">
+                        </div>
+                        <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
+                    </div>
+                </div>
+
+            </form>
+        </div>
+    </div>
+    <!-- Fin Modal -->
+</body>
+</html>
