--- a/ADMFacturar/Views/CXP/Index.cshtml
+++ b/ADMFacturar/Views/CXP/Index.cshtml
@@ -1,115 +1,201 @@
-﻿<link href="~/css/custom.css" rel="stylesheet" />
+﻿<!DOCTYPE html>
+<html lang="en">
+<body>
+    <link href="~/css/custom.css" rel="stylesheet" />
+    <script>
+        // Función para abrir la modal
+        function abrirModal(idModal) {
+            var modal = document.getElementById(idModal);
+            modal.style.display = "block";
+        }
 
-<div class="w-full">
-    
-</div>
+        // Cierra la modal cuando el usuario hace clic en el botón de cerrar (x)
+        var modals = document.getElementsByClassName("modal");
+        for (var i = 0; i < modals.length; i++) {
+            var modal = modals[i];
+            var closeButton = modal.getElementsByClassName("close")[0];
+            closeButton.onclick = function () {
+                modal.style.display = "none";
+            }
+        }
 
-<form>
+        // Cierra la modal cuando el usuario hace clic fuera de ella
+        window.onclick = function (event) {
+            for (var i = 0; i < modals.length; i++) {
+                var modal = modals[i];
+                if (event.target == modal) {
+                    modal.style.display = "none";
+                }
+            }
+        }
+    </script>
+
+    <div class="w-full">
+    </div>
+    <!--Incio de form-->
+    <form>
         <div class="border-b border-gray-900/10 pb-12">
             <h2 class="text-base font-semibold leading-7 text-white">Información Cuentas Por Pagar</h2>
+            <!--Fechas del form-->
             <div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
-            
-            <div class="sm:col-span-2 sm:col-start-1">
-                <label for="city" class="block text-sm font-medium leading-6 text-white">Fecha Inicio</label>
-                <div class="mt-2">
-                    <input type="date"  class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                </div>
-            </div>        
 
-            <div class="sm:col-span-2">
-                <label for="region" class="block text-sm font-medium leading-6 text-white">Fecha Final</label>
-                <div class="mt-2">
-                    <input type="date" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                </div>
-            </div>
-            <div class="sm:col-span-2">
-                <div>
-                    <fieldset>
-                        <legend class="block text-sm font-medium leading-6 text-white">Estado</legend>
-                        <div class="mt-3 flex items-center gap-x-10">
-                            <div class="flex items-center gap-x-2 bg-yellow-100 text-yellow-800 text-md font-medium px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-blue-400 border border-yellow-400 ">
-                                <input id="push-everything" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
-                                <label for="push-everything" class="block text-sm font-medium leading-6 text-gray-900">Pendientes</label>
-                            </div>
-                            <div class="flex items-center gap-x-2 bg-green-100 text-green-800 text-md font-medium px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-blue-400 border border-green-400">
-                                <input id="push-email" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
-                                <label for="push-email" class="block text-sm font-medium leading-6 text-gray-900">Cancelados</label>
-                            </div>
-                        </div>
-                    </fieldset>
-                </div>
-            </div>
-
-                <!--Fin de Fechas-->
-
-
-            <div class="sm:col-span-2 sm:col-start-1">
-                <label for="email" class="block text-sm font-medium leading-6 text-white">Cliente</label>
+                <div class="sm:col-span-2 sm:col-start-1">
+                    <label for="city" class="block text-sm font-medium leading-6 text-white">Fecha Inicio</label>
                     <div class="mt-2">
-                    <input type="text"  class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                    </div>
-                </div>
-
-                <div class="sm:col-span-2 ">
-                <label for="city" class="block text-sm font-medium leading-6 text-white">Vendedor</label>
-                    <div class="mt-2">
-                    <input type="text"  class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                        <input type="date" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
                     </div>
                 </div>
 
                 <div class="sm:col-span-2">
-                <label for="region" class="block text-sm font-medium leading-6 text-white">Factura</label>
+                    <label for="region" class="block text-sm font-medium leading-6 text-white">Fecha Final</label>
                     <div class="mt-2">
-                    <input type="text"  class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                        <input type="date" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                    </div>
+                </div>
+                <div class="sm:col-span-2">
+                    <div>
+                        <fieldset>
+                            <legend class="block text-sm font-medium leading-6 text-white">Estado</legend>
+                            <div class="mt-3 flex items-center gap-x-10">
+                                <div class="flex items-center gap-x-2 bg-yellow-100 text-yellow-800 text-md font-medium px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-blue-400 border border-yellow-400 ">
+                                    <input id="push-everything" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
+                                    <label for="push-everything" class="block text-sm font-medium leading-6 text-gray-900">Pendientes</label>
+                                </div>
+                                <div class="flex items-center gap-x-2 bg-green-100 text-green-800 text-md font-medium px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-blue-400 border border-green-400">
+                                    <input id="push-email" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
+                                    <label for="push-email" class="block text-sm font-medium leading-6 text-gray-900">Cancelados</label>
+                                </div>
+                            </div>
+                        </fieldset>
+                    </div>
+                </div>
+
+                <!--Fin de Fechas-->
+
+
+                <div class="sm:col-span-2 sm:col-start-1">
+                    <label for="email" class="block text-sm font-medium leading-6 text-white">Proveedor</label>
+                    <div class="mt-2">
+                        <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                    </div>
+                </div>
+
+                <div class="sm:col-span-2">
+                    <label for="region" class="block text-sm font-medium leading-6 text-white">Factura</label>
+                    <div class="mt-2">
+                        <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
                     </div>
                 </div>
 
                 <!-- Fin de Datos-->
             </div>
         </div>
-</form>
+    </form>
+    <!--Final de From-->
+    <!-- Info de tabla -->
+    <!--                  Tabla                        -->
 
-<!--                  Formulario                        -->
-
-<div class="w-full">
-    <p class="text-xl pb-3 flex items-center text-white">
-        <i class="fas fa-list mr-3"></i> Listado de Cuentas Por Pagar
-    </p>
-    <div class="bg-white overflow-auto">
-        <table class="min-w-full bg-white border border-gray-300">
-            <thead class="bg-gray-900 text-white">
-                <tr>               
-                    <th class="text-center py-3">Factura</th>
-                    <th class="text-center py-3">Cliente</th>
-                    <th class="text-center py-3">Detalle</th>
-                    <th class="text-center py-3">Total</th>
-                    <th class="text-center py-3">Saldo</th>
-                    <th class="text-center py-3">Acciones</th>
-                </tr>
-            </thead>
-            <tbody class="text-center">
-                <tr class="even:bg-gray-50 dark:even:bg-gray-900/50 lg:justify-center">
-                    <td class="p-3 border border-gray-300">000001</td>
-                    <td class="p-3 border border-gray-300">
-                        <span class=" text-md font-medium px-2.5 py-0.5">Outlet US</span>
-                    </td>
-                    <td class="p-3 border border-gray-300">Se debe cancelar el 22/07/2024</td>
-                    <td class="p-3 border border-gray-300">₡300.000</td>
-                    <td class="p-3 border border-gray-300">₡100.000</td>
-                    <td class="p-3 border border-gray-300">
-
-                        <Botton class="btn btnCrear" title="Crear Abono">
-                            <a asp-action="Abono">
+    <div class="w-full">
+        <p class="text-xl pb-3 flex items-center text-white">
+            <i class="fas fa-list mr-3"></i> Listado de Cuentas Por Pagar
+        </p>
+        <div class="bg-white overflow-auto">
+            <table class="min-w-full bg-white border border-gray-300">
+                <thead class="bg-gray-900 text-white">
+                    <tr>
+                        <th class="text-center py-3">Factura</th>
+                        <th class="text-center py-3">Proveedor</th>
+                        <th class="text-center py-3">Fecha Emisión</th>
+                        <th class="text-center py-3">Detalle</th>
+                        <th class="text-center py-3">Total</th>
+                        <th class="text-center py-3">Saldo</th>
+                        <th class="text-center py-3">Acciones</th>
+                    </tr>
+                </thead>
+                <tbody class="text-center">
+                    <tr class="even:bg-gray-50 dark:even:bg-gray-900/50 lg:justify-center">
+                        <td class="p-3 border border-gray-300">000001</td>
+                        <td class="p-3 border border-gray-300">
+                            <span class=" text-md font-medium px-2.5 py-0.5">Outlet US</span>
+                        </td>
+                        <td class="p-3 border border-gray-300">22/04/2024</td>
+                        <td class="p-3 border border-gray-300">Se debe cancelar el 22/07/2024</td>
+                        <td class="p-3 border border-gray-300">₡300.000</td>
+                        <td class="p-3 border border-gray-300">₡100.000</td>
+                        <td class="p-3 border border-gray-300">
+                            <button class="btn btnCrear" title="Crear Abono" onclick="abrirModal('modalCrearAbono')">
                                 <svg class="svg-inline--fa fa-times fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z" /></svg>
-                            </a>
-                        </Botton>
-                        <Botton class="btn VerDetalles" title="Detalles">
+                            </button>
+                          <Botton class="btn VerDetalles" title="Detalles">
                             <a asp-action="Detalles">
                                 <svg class="svg-inline--fa fa-eye fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="eye" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" data-fa-i2svg=""><path fill="currentColor" d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"></path> </svg>
-                            </a>
-                        </Botton>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+                                </a>
+                            </button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
+
+    <!-- Final de Tabla -->
+    <!-- Modal de Crear Abono -->
+    <div id="modalCrearAbono" class="modal">
+        <div class="modal-content">
+            <form>
+                <div class="border-b border-gray-900/10 pb-12">
+                    <h2 class="text-base font-semibold leading-7 text-white">Gestión de Abonos</h2>
+                    <div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+
+                        <div class="sm:col-span-2 sm:col-start-1">
+                            <label for="region" class="block text-sm font-medium leading-6 text-white">Tipo de Documento</label>
+                            <div class="mt-2">
+                                <select class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
+                                    <option>Transferencia</option>
+                                    <option>Efectivo</option>
+                                    <option>Cheque</option>
+                                    <option>Sinpe</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="sm:col-span-2">
+                            <label for="region" class="block text-sm font-medium leading-6 text-white">Número de Recibo</label>
+                            <div class="mt-2">
+                                <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                            </div>
+                        </div>
+
+                        <div class="sm:col-span-2">
+                            <label for="region" class="block text-sm font-medium leading-6 text-white">Monto</label>
+                            <div class="mt-2">
+                                <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                            </div>
+                        </div>
+
+                        <div class="sm:col-span-2">
+                            <label for="region" class="block text-sm font-medium leading-6 text-white">Banco</label>
+                            <div class="mt-2">
+                                <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                            </div>
+                        </div>
+
+
+                        <div class="sm:col-span-2">
+                            <label for="region" class="block text-sm font-medium leading-6 text-white">Número de Deposito</label>
+                            <div class="mt-2">
+                                <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                            </div>
+                        </div>
+                        <div class="sm:col-span-2">
+                        </div>
+                        <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
+                    </div>
+                </div>
+
+            </form>
+        </div>
+    </div>
+    <!-- Fin Modal -->
+</body>
+</html>
