--- a/ADMFacturar/Views/Shared/PageOptions.cshtml
+++ b/ADMFacturar/Views/Shared/PageOptions.cshtml
@@ -8,7 +8,7 @@ Page Options
     Inicio
 </a>
 
-<a asp-controller="#" asp-action="Index"
+<a asp-controller="Facturas" asp-action="Index"
    class="flex items-center text-white py-4 pl-6 nav-item">
     <i class="fa-solid fa-receipt mr-3"></i>
     Facturación
